--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,31 @@
 }
 
 .gameboard {
-    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 600px;
     aspect-ratio: 1;
     border: 1px dashed white;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 30%;
+    flex-grow: 1;
+
+    width: 200px;
+    aspect-ratio: 1;
+    border: 4px solid teal;
+
+    font-size: 5rem;
+    color: gold;
+    text-transform: uppercase;
+}
+
+.reset {
+    padding: 0.5rem 1rem;
+    font-size: 2rem;
+    text-transform: uppercase;
 }
